--- a/src/app/invite-form/invite-form.component.html
+++ b/src/app/invite-form/invite-form.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="data.status !== 'ACCEPTED'">
   <div *ngIf="!myForm" class="invite-type-container">
     <div class="invite-type-header">
-      <h1 mat-dialog-title class="d-block">
+      <h1  class="d-block">
         {{ 'inviteForm.sendAnInvitation' | translate }}
       </h1>
     </div>
