--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,6 +3,7 @@
   --app-green: #007f00;
   --app-green-2: #80BE03FF;
   --app-white: #FFF;
+  --app-black: rgba(0, 0, 0, 0.87);
   --app-red: #e3393a;
   --app-gray: #464F60FF;
   --app-gray-2: #909090FF;
