--- a/src/app/invite-form/invite-form.component.scss
+++ b/src/app/invite-form/invite-form.component.scss
@@ -150,15 +150,11 @@
 }
 
 .submit__section {
-  // flex: 1 1 571px !important;
   align-items: center;
   display: flex;
-  // margin-right: -24px !important;
-  // margin-left: -24px !important;
   justify-content: center;
   margin: 0px !important;
   border-top: 1px solid rgb(182, 182, 182);
-  place-items: center;
   align-items: center;
   min-height: 60px;
   margin-top: 0 !important;
@@ -177,14 +173,10 @@ form {
 }
 
 h1 {
-  margin-left: -30px;
-  margin-right: -30px;
-  border-bottom: 1px solid rgb(182, 182, 182);
-  padding: 22px;
-  padding-top: 0px;
   font-size: 2em;
   font-weight: 100;
   text-transform: uppercase;
+  border-bottom: 1px solid rgb(182, 182, 182);
 }
 
 .language__option {
@@ -257,10 +249,10 @@ form {
 //   margin-left: -23px;
 // }
 
-::ng-deep #invite_form_dialog {
-  padding: 0 !important;
-  overflow-x: hidden;
-}
+//::ng-deep #invite_form_dialog {
+//  padding: 0 !important;
+//  overflow-x: hidden;
+//}
 .accepted-invite-error{
   display: flex;
   justify-content: center;
