--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -67,6 +67,7 @@
     margin: auto;
     display: block;
     font-size: 12px;
+    font-weight: 500;
     line-height: 1.2;
     white-space: normal;
     word-wrap: break-word;
