--- a/src/styles.scss
+++ b/src/styles.scss
@@ -101,6 +101,10 @@ img.logo {
   justify-content: space-between;
 }
 
+.align-items-center {
+  align-items: center;
+}
+
 .gap-10 {
   gap: 10px;
 }
