--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,7 +1,6 @@
 
 .example-form {
   min-width: 150px;
-  //max-width: 500px;
   width: 100%;
   &.separated {
     margin-top: 40px;
@@ -15,49 +14,12 @@
   }
 }
 
-.container {
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  ::ng-deep .mat-focused .mat-form-field-label {
-    /*change color of label*/
-    color: white !important;
-  }
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  ::ng-deep.mat-form-field-underline {
-    /*change color of underline*/
-    background-color: white !important;
-  }
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  ::ng-deep.mat-form-field-ripple {
-    /*change color of underline when focused*/
-    background-color: white !important;
-  }
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  ::ng-deep .mat-form-field-label {
-    /*change color of label*/
-    color: white !important;
-  }
-}
 
-.example-full-width {
-  width: 100%;
-  height: 50px;
-  padding: 0px;
-}
-
-.example-full-width input {
-  height: 100%;
-}
 .container {
   width: 400px;
   margin: auto;
+  display: flex;
+  flex-direction: column;
 
   @media (max-width: 600px) {
     margin: 30px;
@@ -73,25 +35,23 @@
 
   font-weight: 800;
 }
+
 .at > span {
   display: block;
   font-size: 16px;
 }
 
-ng-container {
-}
-
 .wrap {
+  top: 0;
   width: 100%;
   height: 100%;
-  background-image: url("/assets/bg-splash@2x.png");
+  display: flex;
+  position: fixed;
+  align-items: center;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  top: 0;
-  position: fixed;
-  display: flex;
-  align-items: center;
+  background-image: url("/assets/bg-splash@2x.png");
 }
 
 .saml-login {
@@ -108,9 +68,9 @@ ng-container {
 }
 
 h4 {
-  color: #fff;
   text-align: center;
   margin-bottom: -10px;
+  color: var(--app-white);
 }
 
 .submit-btn {
@@ -125,30 +85,9 @@ h4 {
   color: var(--primary-color);
 }
 
-input {
-  color: white;
-  caret-color: white;
-}
-
-mat-form-field {
-  height: 35px;
-  font-size: 1.3em;
-  margin: 20px auto;
-}
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
-  -webkit-box-shadow: 0 0 0 30px var(--primary-color) inset !important;
-}
-
-input:-webkit-autofill {
-  -webkit-text-fill-color: white !important;
-}
-
 .loading {
-  margin-top: 20px;
   display: flex;
+  margin-top: 20px;
   align-items: center;
   justify-content: center;
 
@@ -160,25 +99,20 @@ input:-webkit-autofill {
 
 .error {
   margin-top: 28px;
-  color: rgb(255, 45, 45);
   text-align: center;
+  color: var(--app-red);
 }
 
 .resend-btn {
   margin: auto;
   display: block;
   margin-top: 20px;
-
-  // border-radius: 60px;
   text-align: center;
-  // width: 160px;
-  // height: 48px;
-  color: white;
+  color: var(--app-white);
 }
 
 .error--loading {
   margin-top: 20px;
-
   min-height: 80px;
 }
 
@@ -186,14 +120,6 @@ input:-webkit-autofill {
   width: 100%;
   display: flex;
   align-items: center;
-  mat-form-field {
-    /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-    /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-    /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-    ::ng-deep .mat-form-field-label {
-      left: 0 !important;
-    }
-  }
 }
 
 .row {
@@ -205,10 +131,16 @@ input:-webkit-autofill {
 }
 
 .white-link {
-  display: inline-block;
-  color: white;
   opacity: 0.8;
+  display: inline-block;
+  color: var(--app-white);
 }
+
 .login-local-header {
   margin-bottom: 16px !important;
+}
+
+
+.example-full-width {
+  width: 100%;
 }
