--- a/src/app/top-nav/top-nav.component.scss
+++ b/src/app/top-nav/top-nav.component.scss
@@ -102,6 +102,8 @@
 .menu {
   height: 100%;
   display: flex;
+  cursor: pointer;
+  margin-left: 20px;
   align-items: center;
   justify-content: center;
 
